# DigitalImageProcessing

./: .gitignore
ex1/: CMakeLists.txt  bitmap.cpp  bitmap.h  bmpFuncs.cpp
ex2/: CMakeLists.txt  bitmap.h  ex2.cpp  imageTransform.cpp  imageTransform.h  test.cpp  test.h  transform.cpp  transform.h
ex2/doc/: 数字图像处理实验二.ppt  数字图像处理实验二补充.ppt
ex3/: CMakeLists.txt  CWavelet.cpp  CWavelet.h  ex3.cpp  filter.cpp  filter.h
ex4/: CMakeLists.txt  ex4.cpp  otsu.cpp
ex4/doc/: 数字图像处理-实验四-18B903052张慧琮  18B903053丁庆鹏.doc
ex4/image_processing_experiment4/: exp4.py
